--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -1,10 +1,20 @@
-\documentclass[12pt]{report}
+\documentclass[a4paper,12pt]{report}
 \usepackage   {xltxtra}
 \usepackage   {fontspec}
+\usepackage   {titlesec}
+\usepackage   {microtype}
 \usepackage   {hyperref}
 
+\hypersetup{
+    colorlinks=true,
+    linkcolor=cyan,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
+
+\urlstyle {same}
 % Fonts
-\setmainfont{Arial}
+\setmainfont{Times New Roman}
 
 % Title
 \title {Εργασία 2019-20: Conway’s Game of Life}
@@ -12,15 +22,16 @@
 \date {3 Σεπτεμβρίου 2020}
 
 \renewcommand\contentsname{Περιεχόμενα}
+
 \begin{document}
 
 \maketitle
 
-\tableofcontents
+\tableofcontents{}
 
 \chapter {Καθαρά MPI}
-\input   {chapters/MPI}
+\input     {chapters/MPI}
 
 \chapter {MPI + OpenMP}
-\input   {chapters/MPI_OpenMP}
+\input     {chapters/MPI_OpenMP}
 \end{document}
