--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -1,8 +1,11 @@
-\documentclass[a4paper,12pt]{report}
+\documentclass[a4paper,twoside,12pt]{report}
 \usepackage   {xltxtra}
 \usepackage   {fontspec}
 \usepackage   {titlesec}
 \usepackage   {microtype}
+\usepackage   {fancyhdr}
+\pagestyle    {fancy}
+\usepackage   [a4paper,width=150mm,top=25mm,bottom=25mm]{geometry}
 \usepackage   {hyperref}
 
 \hypersetup{
@@ -17,7 +20,7 @@
 \setmainfont{Times New Roman}
 
 % Title
-\title {Εργασία 2019-20: Conway’s Game of Life}
+\title {Παράλληλα Υπολογιστικά Συστήματα\\Εργασία 2019-20\\Conway’s Game of Life}
 \author {Ραδιώτης Βασίλειος EN1180005}
 \date {3 Σεπτεμβρίου 2020}
 
@@ -29,7 +32,7 @@
 
 \tableofcontents{}
 
-\chapter {Καθαρά MPI}
+\chapter {MPI}
 \input     {chapters/MPI}
 
 \chapter {MPI + OpenMP}
