--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -7,6 +7,7 @@
 \usepackage{minted}
 \usepackage{fancyhdr}
 \pagestyle    {fancy}
+%\fancyhead[LE,RO]{\nouppercase{\section}}
 \usepackage{multicol}
 \setlength{\columnsep}{1cm}
 \usepackage[a4paper,left=25mm,top=25mm,bottom=25mm]{geometry}
@@ -14,6 +15,7 @@
 \usepackage{nicematrix}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{tcolorbox}
 \usepackage{hyperref}
 
 \hypersetup{
@@ -26,13 +28,15 @@
 \urlstyle {same}
 % Fonts
 \setmainfont{Times New Roman}
-\setminted[C]{style=pastie,breaklines,breakanywhere=true,breakautoindent,fontsize=\footnotesize}
+\setminted[C]{style=pastie,breaklines,breakautoindent,fontsize=\footnotesize}
 \renewcommand\contentsname{Περιεχόμενα}
 \renewcommand{\chaptername}{ΘΕΜΑ}
 \renewcommand{\figurename}{Σχήμα}
 \renewcommand{\thefigure}{\Roman{figure}}
 \renewcommand{\thesubfigure}{\arabic{subfigure}}
 \captionsetup[subfigure]{labelformat=parens, labelsep=quad}
+
+\tcbset{colback=white,colframe=red!75!black}
 
 % Title
 \title {Παράλληλα Υπολογιστικά Συστήματα\\Εργασία 2019-20\\Conway’s Game of Life}
