--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -24,6 +24,8 @@
     linkcolor=cyan,
     filecolor=magenta,      
     urlcolor=cyan,
+    pdftitle={Παράλληλα Υπολογιστικά Συστήματα - Conway’s Game of Life},
+    bookmarks=true,
 }
 
 \urlstyle {same}
@@ -40,7 +42,7 @@
 \tcbset{colback=white,colframe=red!75!black}
 
 % Title
-\title {Παράλληλα Υπολογιστικά Συστήματα\\Εργασία 2019-20\\Conway’s Game of Life}
+\title {Παράλληλα Υπολογιστικά Συστήματα\\Εργασία 2019--2020\\Conway’s Game of Life}
 \author {Ραδιώτης Βασίλειος EN1180005}
 \date {\today}
 
