--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -18,6 +18,8 @@
 \usepackage{tcolorbox}
 \usepackage{tikz}
 \usepackage{url}
+\usepackage{diagbox}
+\usepackage{siunitx}
 \usepackage{hyperref}
 
 \hypersetup{
