--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -40,6 +40,7 @@
 \renewcommand{\figurename}{Σχήμα}
 \renewcommand{\thefigure}{\Roman{figure}}
 \renewcommand{\thesubfigure}{\arabic{subfigure}}
+\renewcommand{\tablename}{Πίνακας}
 \captionsetup[subfigure]{labelformat=parens, labelsep=quad}
 
 \tcbset{colback=white,colframe=red!75!black}
