--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -59,6 +59,9 @@
 \chapter {MPI}
 \input     {chapters/MPI}
 
-\chapter {MPI με OpenMP}
+\chapter {MPI με Allreduce}
+\input     {chapters/MPI_Allreduce}
+
+\chapter {MPI με Allreduce και OpenMP}
 \input     {chapters/MPI_OpenMP}
 \end{document}
