--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -32,6 +32,9 @@
 \chapter {Καθαρά MPI}
 \input     {chapters/MPI}
 
-\chapter {MPI + OpenMP}
+\chapter {MPI με Allreduce}
+\input     {chapters/MPI_Allreduce}
+
+\chapter {MPI με Allreduce και OpenMP}
 \input     {chapters/MPI_OpenMP}
 \end{document}
