--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -1,27 +1,54 @@
-\documentclass[a4paper,12pt]{report}
-\usepackage   {xltxtra}
-\usepackage   {fontspec}
-\usepackage   {titlesec}
-\usepackage   {microtype}
-\usepackage   {hyperref}
+\documentclass[a4paper,twoside,12pt]{report}
+\usepackage{xltxtra}
+\usepackage[table]{xcolor}
+\usepackage{fontspec}
+\usepackage{titlesec}
+\usepackage{microtype}
+\usepackage{minted}
+\usepackage{fancyhdr}
+\pagestyle    {fancy}
+\fancyhead[LE,RO]{\nouppercase{\rightmark}}
+\usepackage{multicol}
+\setlength{\columnsep}{1cm}
+\usepackage[a4paper,left=25mm,top=25mm,bottom=25mm]{geometry}
+\usepackage{amsmath}
+\usepackage{nicematrix}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{tcolorbox}
+\usepackage{tikz}
+\usepackage{url}
+\usepackage{diagbox}
+\usepackage{siunitx}
+\usepackage{hyperref}
 
 \hypersetup{
     colorlinks=true,
     linkcolor=cyan,
     filecolor=magenta,      
     urlcolor=cyan,
+    pdftitle={Παράλληλα Υπολογιστικά Συστήματα - Conway’s Game of Life},
+    bookmarks=true,
 }
 
 \urlstyle {same}
 % Fonts
 \setmainfont{Times New Roman}
+\setminted[C]{style=pastie,breaklines,breakautoindent,breaksymbolleft={},fontsize=\footnotesize}
+\renewcommand\contentsname{Περιεχόμενα}
+\renewcommand{\chaptername}{ΘΕΜΑ}
+\renewcommand{\figurename}{Σχήμα}
+\renewcommand{\thefigure}{\Roman{figure}}
+\renewcommand{\thesubfigure}{\arabic{subfigure}}
+\renewcommand{\tablename}{Πίνακας}
+\captionsetup[subfigure]{labelformat=parens, labelsep=quad}
+
+\tcbset{colback=white,colframe=red!75!black}
 
 % Title
-\title {Εργασία 2019-20: Conway’s Game of Life}
+\title {Παράλληλα Υπολογιστικά Συστήματα\\Εργασία 2019--2020\\Conway’s Game of Life}
 \author {Ραδιώτης Βασίλειος EN1180005}
-\date {3 Σεπτεμβρίου 2020}
-
-\renewcommand\contentsname{Περιεχόμενα}
+\date {\today}
 
 \begin{document}
 
@@ -29,7 +56,7 @@
 
 \tableofcontents{}
 
-\chapter {Καθαρά MPI}
+\chapter {MPI}
 \input     {chapters/MPI}
 
 \chapter {MPI με Allreduce}
