--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -20,6 +20,8 @@
 \usepackage{url}
 \usepackage{diagbox}
 \usepackage{siunitx}
+\usepackage{float}
+\usepackage{tabularx}
 \usepackage{hyperref}
 
 \hypersetup{
