--- a/Document/ParallelSystemsAssignment.tex
+++ b/Document/ParallelSystemsAssignment.tex
@@ -66,4 +66,8 @@
 
 \chapter {MPI με Allreduce και OpenMP}
 \input     {chapters/MPI_OpenMP}
+
+\chapter {CUDA}
+\input     {chapters/CUDA}
+
 \end{document}
